[gd_scene load_steps=8 format=3 uid="uid://ca54jucxu55cq"]

[ext_resource type="Script" path="res://game_over.gd" id="1_1rcqa"]
[ext_resource type="Texture2D" uid="uid://ewp024qu1yjf" path="res://assets/scoreboard.png" id="1_ntf43"]
[ext_resource type="Texture2D" uid="uid://ddmrhix2mrtsy" path="res://assets/okButton.png" id="3_k5f15"]
[ext_resource type="Texture2D" uid="uid://baxnsfmlhy6tn" path="res://assets/buttonRestart.png" id="4_44b33"]

[sub_resource type="Animation" id="Animation_mnjs7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 200)]
}

[sub_resource type="Animation" id="Animation_wpgbj"]
resource_name = "Rise"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 200), Vector2(0, 50), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nc1yw"]
_data = {
"RESET": SubResource("Animation_mnjs7"),
"Rise": SubResource("Animation_wpgbj")
}

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_1rcqa")

[node name="ScoreBoard" type="Sprite2D" parent="."]
position = Vector2(72.5, 109)
texture = ExtResource("1_ntf43")
offset = Vector2(0, 200)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScoreBoard"]
libraries = {
"": SubResource("AnimationLibrary_nc1yw")
}
speed_scale = 2.0

[node name="Score" type="Label" parent="."]
offset_left = 102.5
offset_top = 90.0
offset_right = 122.5
offset_bottom = 113.0
text = "0"

[node name="Best" type="Label" parent="."]
offset_left = 103.5
offset_top = 111.0
offset_right = 123.5
offset_bottom = 134.0
text = "0"

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 24.5
offset_top = 165.0
offset_right = 64.5
offset_bottom = 179.0
texture_normal = ExtResource("3_k5f15")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 80.5
offset_top = 165.0
offset_right = 120.5
offset_bottom = 179.0
texture_normal = ExtResource("4_44b33")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
